# cmake-pybind11-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: add.cpp  add.h
tests/: add_test.cpp
